feat(transaction): Improving transaction display - We now get a map of where the transaction occurred (not editable) - Updating API usage to support knowing the types of the transaction data
