# backend/src/config/model/api/configuration.dto.ts
@@ -15,10 +15,14 @@ export class APIConfig extends Base {
   /** The brandfetch client ID used for displaying logos. */
   brandFetchClientId?: string;
 
-  constructor(chatKeyProvidedInBackend: boolean, emailEnabled: boolean, brandFetchClientId?: string) {
+  /** The tile server to use for frontend mapping display. */
+  tileServer?: string;
+
+  constructor(chatKeyProvidedInBackend: boolean, emailEnabled: boolean, brandFetchClientId?: string, tileServer?: string) {
     super();
     this.chatKeyProvidedInBackend = chatKeyProvidedInBackend;
     this.emailEnabled = emailEnabled;
     this.brandFetchClientId = brandFetchClientId;
+    this.tileServer = tileServer;
   }
 }
